--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
     <title>Sebastian Gonzalez</title>
   </head>
   <body>
-    <h1>Welcome to my sitet</h1>
+    <h1>Welcome to my site - Coming soon</h1>
   </body>
 </html>
